font size corrections on mobile

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -1,5 +1,5 @@
 @import url(https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css);
-@import url(https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap-theme.min.css);
+/*@import url(https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap-theme.min.css);*/
 @import url(https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css);
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.1/css/font-awesome.min.css);
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,100,100italic,300italic,400italic,500,500italic,700,900,700italic,900italic);
@@ -36,7 +36,7 @@ email::before {
 
 .drop-it {
   color: #fff;
-  font-size: 8rem;
+  font-size: 10vmin;
   font-weight: bold;
   font-family: 'Roboto';
   text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0, 0, 0, .1), 0 0 5px rgba(0, 0, 0, .1), 0 1px 3px rgba(0, 0, 0, .3), 0 3px 5px rgba(0, 0, 0, .2), 0 5px 10px rgba(0, 0, 0, .25), 0 10px 10px rgba(0, 0, 0, .2), 0 20px 20px rgba(0, 0, 0, .15);
@@ -97,7 +97,7 @@ email::before {
 #resume .avatar {
   width: 200px;
   margin: 10px;
-  border: 10px solid #48B8CF;
+  border: 10px solid #00bcd4;
   border-radius: 500px;
   -webkit-border-radius: 500px;
   -moz-border-radius: 500px;
